language/move-lang/tests/move_check/parser/function_incomplete.exp
error: 

   ┌── tests/move_check/parser/function_incomplete.move:5:1 ───
   │
 5 │ 
   │ ^ Unexpected end-of-file
   ·
 5 │ 
   │ - Expected an expression term
   │

